@@ -44,6 +44,22 @@ module Sequel
           conn.prepared_statements = {}
         end
 
+        # Stupid MySQL doesn't use SQLState error codes correctly, mapping
+        # all constraint violations to 23000 even though it recognizes
+        # different types.
+        def database_specific_error_class(exception, opts)
+          case exception.errno
+          when 1048
+            NotNullConstraintViolation
+          when 1062
+            UniqueConstraintViolation
+          when 1451, 1452
+            ForeignKeyConstraintViolation
+          else
+            super
+          end
+        end
+
         # Executes a prepared statement on an available connection.  If the
         # prepared statement already exists for the connection and has the same
         # SQL, reuse it, otherwise, prepare the new statement.  Because of the
@@ -65,8 +81,8 @@ module Sequel
             _execute(conn, "EXECUTE #{ps_name}#{" USING #{(1..i).map{|j| "@sequel_arg_#{j}"}.join(', ')}" unless i == 0}", opts, &block)
           end
         end
-        
       end
+
       module DatasetMethods
         include Sequel::Dataset::StoredProcedures
        
